fix: increases header toggle contrast

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -65,6 +65,7 @@
 
   & svg {
     display: block;
+    stroke-width: 2px;
   }
 
   @media (--media-min-medium) {
